<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="BleFragment"
            type="com.silvertak.meshsampleapplication.ui.ble.BleFragment" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:id="@+id/zacharyOnButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/zachary_light_on"
                    android:onClick="@{BleFragment::onClick}"/>
                <Button
                    android:id="@+id/zacharyOffButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/zachary_light_off"
                    android:onClick="@{BleFragment::onClick}"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">
                <Button
                    android:id="@+id/test1OnButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/test1_light_on"
                    android:onClick="@{BleFragment::onClick}"/>
                <Button
                    android:id="@+id/test1OffButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/test1_light_off"
                    android:onClick="@{BleFragment::onClick}"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2">
                <Button
                    android:id="@+id/test2OnButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/test2_light_on"
                    android:onClick="@{BleFragment::onClick}"/>
                <Button
                    android:id="@+id/test2OffButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/test2_light_off"
                    android:onClick="@{BleFragment::onClick}"/>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="2">
                <Button
                    android:id="@+id/test3OnButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/test3_light_on"
                    android:onClick="@{BleFragment::onClick}"/>
                <Button
                    android:id="@+id/test3OffButton"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:text="@string/test3_light_off"
                    android:onClick="@{BleFragment::onClick}"/>
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</layout>
